Re-enable NeoForge